--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.17"
 rand = "0.8.4"
 termion = "1.5.6"
+tokio = { version = "1.12.0", features = ["full"] }
 
 [features]
